--- a/PetMate/src/components/ModalAvisoFinalizar.css
+++ b/PetMate/src/components/ModalAvisoFinalizar.css
@@ -1,12 +1,66 @@
 .modalAviso {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: rgb(243, 243, 243);
     padding: 30px 20px;
     border-radius: 15px;
     box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.2);
     text-align: center;
-    position: relative;
-    max-width: 500px;
+    max-width: 30vw;
     width: 90%;
+    min-height: 36vh;
+    animation: fadeIn 0.15s ease-out;
+
+}
+    
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: scale(0.8);
+    }
+    10% {
+        opacity: 0.1;
+        transform: scale(0.82);
+    }
+    20% {
+        opacity: 0.2;
+        transform: scale(0.84);
+    }
+    30% {
+        opacity: 0.3;
+        transform: scale(0.86);
+    }
+    40% {
+        opacity: 0.4;
+        transform: scale(0.88);
+    }
+    50% {
+        opacity: 0.5;
+        transform: scale(0.9);
+    }
+    60% {
+        opacity: 0.6;
+        transform: scale(0.92);
+    }
+    70% {
+        opacity: 0.7;
+        transform: scale(0.94);
+    }
+    80% {
+        opacity: 0.8;
+        transform: scale(0.96);
+    }
+    90% {
+        opacity: 0.9;
+        transform: scale(0.98);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
 
 .icone-alertaModal {
@@ -15,7 +69,7 @@
 }
 
 .mensagem-aviso {
-    font-family: 'Open Sans Hebrew';
+    font-family: 'Nunito';
     font-size: 20px;
     color: #4B2C19;
     font-weight: bold;
@@ -36,9 +90,9 @@
 
 /* Botão Cancelar */
 .botao-cancelar-aviso {
-    background-color: #D2691E;
-    color: white;
-    border: none;
+    background-color: #F5F5F5;
+    color: #4B2C19;
+    border: #4B2C19 2px solid;
     padding: 15px 25px;
     border-radius: 30px;
     font-weight: bold;
@@ -54,14 +108,14 @@
 }
 
 .botao-cancelar-aviso:hover {
-    background-color: #B8661C;
+    /* background-color: #B8661C; */
     transform: translateY(-2px);
     box-shadow: 0 4px 12px rgba(210, 105, 30, 0.3);
 }
 
 /* Botão Finalizar atualizado */
 .botao-finalizar-aviso {
-    background-color: #9C7A5E;
+    background-color: #7A5D47;
     color: white;
     border: none;
     padding: 15px 25px;
@@ -79,7 +133,7 @@
 }
 
 .botao-finalizar-aviso:hover {
-    background-color: #7A5D47;
+    /* background-color: #7A5D47; */
     transform: translateY(-2px);
     box-shadow: 0 4px 12px rgba(156, 122, 94, 0.3);
 }
