--- a/PetMate/src/pages/Carrinho.css
+++ b/PetMate/src/pages/Carrinho.css
@@ -19,6 +19,11 @@
     margin-left: 50px;
 }
 .produtosAdicionados{
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 150px;
     border: 3px solid #9C7A5E;
     border-radius: 20px;
     height: 500px;
@@ -30,9 +35,16 @@
     margin-bottom: 10px;
     font-weight: 800;
     font-family: 'Raleway';
-    margin-left: 350px;
-    margin-top: 12px;
+    margin-top: 20px;
 }
+.produtosAdicionados p {
+    font-size: 25px;
+    color: #84644D;
+    margin-bottom: 10px;
+    font-weight: 650;
+    font-family: 'Raleway';
+}
+
 .subtotal{
     border: 3px solid #9C7A5E;
     background-color: #FFFFFF;
