--- a/PetMate/src/pages/Carrinho.css
+++ b/PetMate/src/pages/Carrinho.css
@@ -1,7 +1,13 @@
+.container-carrinho {
+  background-image: url(/images/fundo_patas.svg);
+
+}
+
 .titulo-carrinho {
     margin-left: 50px;
     margin-bottom: 50px;
 }
+
 .titulo-carrinho h2 {
     font-size: 50px;
     color: #84644D;
@@ -14,30 +20,35 @@
 .container-produtos{
     display: flex;
     gap: 35px;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
     margin-bottom: 100px;
     margin-left: 50px;
 }
-.produtosAdicionados{
-    flex-direction: column;
+
+.produtos-adicionados{
     display: flex;
+    flex-direction: column;
     align-items: center;
+    /* background-color: #FFF; */
     justify-content: flex-start;
-    gap: 150px;
     border: 3px solid #9C7A5E;
     border-radius: 20px;
-    height: 500px;
-    width: 70%;
+    max-height: 70vh;
+    width: 75vw;
+    padding: 20px;
 }
-.produtosAdicionados h2 {
+
+.produtos-adicionados h2 {
     font-size: 35px;
     color: #84644D;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     font-weight: 800;
     font-family: 'Raleway';
-    margin-top: 20px;
+    margin-top: 0;
 }
-.produtosAdicionados p {
+
+.produtos-adicionados p {
     font-size: 25px;
     color: #84644D;
     margin-bottom: 10px;
@@ -52,6 +63,7 @@
     height: 400px;
     width: 25%;
 }
+
 .subtotal p {
     font-size: 25px;
     color: #84644D;
@@ -61,6 +73,7 @@
     margin-left: 50px;
     margin-top: 12px;
 }
+
 .fecharPedido{
     background-color: #654833;
     color: white;
@@ -79,4 +92,53 @@
     white-space: nowrap;
     min-width: fit-content;
     margin-bottom: 20px;
+}
+
+.container-cards-itens {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    width: 100%;
+    padding: 10px 0;
+    max-height: 100%;
+    overflow-y: auto;
+    scrollbar-width: thin;
+    scrollbar-color: #84644D #f1f1f1;
+}
+
+@media (max-width: 1400px) {
+    .container-cards-itens {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width: 1000px) {
+    .container-cards-itens {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 600px) {
+    .container-cards-itens {
+        grid-template-columns: 1fr;
+    }
+}
+
+.container-cards-itens::-webkit-scrollbar {
+    width: 8px;
+}
+
+.container-cards-itens::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 10px;
+}
+
+.container-cards-itens::-webkit-scrollbar-thumb {
+    background: #84644D;
+    border-radius: 10px;
+    transition: background 0.3s;
+}
+
+.container-cards-itens::-webkit-scrollbar-thumb:hover {
+    background: #654833;
 }
