--- a/PetMate/src/pages/Carrinho.css
+++ b/PetMate/src/pages/Carrinho.css
@@ -1,6 +1,6 @@
 .container-carrinho {
-  background-image: url(/images/fundo_patas.svg);
-
+    background-image: url(/images/fundo_patas.svg);
+    font-family: 'Nunito';
 }
 
 .titulo-carrinho {
@@ -16,27 +16,65 @@
     font-family: 'Raleway';
 }
 
-
-.container-produtos{
+.container-produtos {
     display: flex;
-    gap: 35px;
+    flex-direction: column;
+    /* gap: 35px; */
     justify-content: center;
     align-items: center;
-    margin-bottom: 100px;
-    margin-left: 50px;
+
+    /* margin-bottom: 100px; */
+
+    /* padding: 0 10px; */
+    /* padding-left: 10px; */
+    /* padding-right: 10px; */
+    /* margin-left: 50px; */
 }
 
-.produtos-adicionados{
+.container-titulo-carrinho {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    height: 3rem;
+    background-color: #F5F5F5;
+    border-bottom: 3px solid #9C7A5E;
+    border-radius: 20px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+.produto-title {
+    width: 70%;
+    padding-left: 2rem;
+    /* border: solid; */
+}
+
+.valores-title {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    /* width: 29%; */
+    gap: 1rem;
+    /* padding-left: 1.5vw; */
+    /* border: solid; */
+}
+
+.produtos-adicionados {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
     border: 3px solid #9C7A5E;
     border-radius: 20px;
+    width: 60vw;
+    padding: 5px;
+    background-color: #F5F5F5;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
     /* max-height: 70vh; */
-    width: 75vw;
-    padding: 20px;
-    backdrop-filter: blur(5px);
+    /* backdrop-filter: blur(5px); */
 }
 
 .produtos-adicionados h2 {
@@ -51,17 +89,25 @@
 .produtos-adicionados p {
     font-size: 25px;
     color: #84644D;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
     font-weight: 650;
     font-family: 'Nunito';
 }
 
-.subtotal{
+.subtotal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: 3px solid #9C7A5E;
+    border-top: 0;
     background-color: #F5F5F5;
     border-radius: 20px;
-    height: 400px;
-    width: 25%;
+    height: 200px;
+    width: 60vw;
+    margin-bottom: 2rem;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    gap: 10px;
 }
 
 .subtotal p {
@@ -74,7 +120,7 @@
     margin-top: 12px;
 }
 
-.fecharPedido{
+.fecharPedido {
     background-color: #654833;
     color: white;
     border: none;
@@ -82,28 +128,30 @@
     border-radius: 15px;
     font-weight: bold;
     cursor: pointer;
-    margin-top: 200px;
-    margin-left: 120px;
-    font-family: 'Open Sans Hebrew';
+    font-family: 'Nunito';
     font-size: 25px;
     display: flex;
     align-items: center;
     justify-content: center;
     white-space: nowrap;
     min-width: fit-content;
-    margin-bottom: 20px;
+    /* margin-top: 200px; */
+    /* margin-left: 120px; */
+    /* margin-bottom: 20px; */
 }
 
 .container-cards-itens {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
+    display: flex;
+    flex-direction: column;
+    /* grid-template-columns: repeat(4, 1fr); */
+    /* gap: 20px; */
     width: 100%;
-    padding: 10px 0;
+    /* padding: 10px 0; */
     max-height: 100%;
-    overflow-y: auto;
+    /* border-top: 3px solid #9C7A5E; */
+    /* overflow-y: auto;
     scrollbar-width: thin;
-    scrollbar-color: #84644D #f1f1f1;
+    scrollbar-color: #84644D #f1f1f1; */
 }
 
 @media (max-width: 1400px) {
