func + style: botão personalizar coleira pré-montada

--- a/PetMate/src/components/ModalPersonalizarColeira.css
+++ b/PetMate/src/components/ModalPersonalizarColeira.css
@@ -262,7 +262,7 @@
 .opcoes-tamanho,
 .opcoes-gps,
 .opcoes-cores,
-.opcoes-medalha,
+.opcoes-argola,
 .opcoes-desenho {
     display: flex;
     gap: 10px;
